--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,3 +3,35 @@
   margin: 0;
   padding: 0;
 }
+.container {
+  /* width: 530px; */
+  height: 533px;
+  margin: auto;
+  margin-top: 100px;
+  border-radius: 24px;
+  border: solid 1px rgb(230, 228, 228);
+  padding: 32px;
+}
+.container p {
+  opacity: 60%;
+  /* width: 466px; */
+  height: 19px;
+}
+.card {
+  display: flex;
+  justify-content: space-between;
+  /* width: 466px; */
+  height: 72px;
+  padding: 16px, 0px, 16px, 0px;
+  background-color: aqua;
+}
+.score {
+  display: flex;
+  width: 100px;
+}
+.score .buttonsOperators {
+  height: 40px;
+  width: 40px;
+  padding: 20px;
+  /* border-radius: 50%; */
+}
